--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </script>
 <link rel="stylesheet" href="./index.css">
 </head>
-  <body class="bg-slate-950 text-slate-200 antialiased selection:bg-cyan-500 selection:text-white overflow-x-hidden">
+  <body class="bg-white text-slate-900 antialiased selection:bg-cyan-200 selection:text-slate-900 overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
